Delete all cluttered stuffs

--- a/app/views/pages/wit.html.erb
+++ b/app/views/pages/wit.html.erb
@@ -1,8 +1,6 @@
 <div class="container center-page">
   <div id="wit_input">
     <input type="text">
-    <button>Send request</button>
+    <button class="btn not-rounded">Send request</button>
   </div>
-
-  <div id="wit_output"></div>
 </div>
