--- a/app/assets/javascripts/pages.js.erb
+++ b/app/assets/javascripts/pages.js.erb
@@ -151,7 +151,7 @@ var renderWeather = function () {
     // var lng = response.coords.longitude;
     // var accuracy = response.coords.accuracy;
     var url = "/fetch_initial_weather"
-    console.log( lat, lng );
+    // console.log( lat, lng );
     $.ajax( {
       url: url,
       method: "GET",
