--- a/app/assets/javascripts/pages.js.erb
+++ b/app/assets/javascripts/pages.js.erb
@@ -49,23 +49,23 @@ var renderNewsDetails = function( url ) {
 };
 
 var renderNewsArticle = function ( article ) {
+  console.log( article );
   if( article === "first" ) {
-    var news = $( ".news-content" ).eq( 0 );
+    var news = $( ".news-content" ).eq( 0 ).attr( "data-url" );
     renderNewsDetails( news );
   } else if( article === "second" ) {
-    var news = $( ".news-content" ).eq( 1 );
+    var news = $( ".news-content" ).eq( 1 ).attr( "data-url" );
     renderNewsDetails( news );
   } else if( article === "third" ) {
-    var news = $( ".news-content" ).eq( 2 );
+    var news = $( ".news-content" ).eq( 2 ).attr( "data-url" );
     renderNewsDetails( news );
   } else if( article === "fourth" ) {
-    var news = $( ".news-content" ).eq( 3 );
+    var news = $( ".news-content" ).eq( 3 ).attr( "data-url" );
     renderNewsDetails( news );
   } else if( article === "fifth" ) {
-    var news = $( ".news-content" ).eq( 4 );
+    var news = $( ".news-content" ).eq( 4 ).attr( "data-url" );
     renderNewsDetails( news );
   }
-
 
 };
 
@@ -112,7 +112,9 @@ var setNewsFeedListener = function () {
 
   // When clicking on the articles
   $( ".news-content").on( "click", function () {
+
     renderNewsDetails( $( this ).attr( "data-url" ) );
+
   } );
 
 };
