--- a/app/views/pages/chime.html.erb
+++ b/app/views/pages/chime.html.erb
@@ -1,4 +1,4 @@
-<h1 class="title">Chimerical Partner</h1>
+<h1 class="title">Chimerical Partner</h1><h5 class="title">Beta</h5>
 
 <div class="pure-g container">
   <!-- Will have the greetings, weather and music playlist -->
